Closed Bug 153421 Opened 23 years ago Closed 23 years ago

When throbber is present, closing a window while page is still loading results in crash [@ objc_msgSend]

Categories

(Camino Graveyard :: Page Layout, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.3

People

(Reporter: chrispetersen, Assigned: mikepinkerton)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Build: 2002-06-21-05 Platform: OS X 10.1.5 Expected Result: Window should close with no crash resulting What I got: Application crashes Steps to reproduce: 1) Customize toolbar by adding progress throbber (globe). 2) Type a url like cnn.com and press return. 3) Before the page is completely loaded, close it. 4) The application should crash.
Attached file Stack trace
Winnie, Can you reproduce this ?
adding to the blocker list and tossing at beard incase he has a fix
Assignee: saari → beard
Blocks: 147975
Didn't crash for me with 06-21 build.
WorksForMe using Chimera/20020621. (Shouldn't this just be critical rather than blocker?)
Keywords: crash
Summary: When throbber is present, closing a window while page is still loading results in crash → When throbber is present, closing a window while page is still loading results in crash [@ objc_msgSend]
I could crash this
i'll take it
Assignee: beard → pinkerton
Target Milestone: --- → Chimera0.3
the problem here is that we continue loading the page long after the window goes away. i can't tell why. conrad might be able to tell what we're not doing when we shut down the machinery.
Status: NEW → ASSIGNED
ok, i figured it out. the throbber's timer was holding a strong ref to the browser window controller (since it was the target) and keeping it alive long after the window went away, and as a result, not stopping any pageloads in progress. i'll fix it, should be pretty simple.
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified fixed in 2002-06-25-05 NB.
Status: RESOLVED → VERIFIED
*** Bug 154060 has been marked as a duplicate of this bug. ***
No longer blocks: 147975
Crash Signature: [@ objc_msgSend]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: