Break cycle with throbber so that we no longer crash when animating the throbber and closing a window, or continue loading the page after the window has gone away. (bug 153421)